Could only do that to half-fix the wrapping issue...

--- a/static/css/post.css
+++ b/static/css/post.css
@@ -56,6 +56,11 @@
   border-radius: 0.5rem;
 }
 
+.highlight > pre > code {
+  display: flex;
+  flex-wrap: wrap;
+}
+
 pre {
   padding: 10px;
   width: inherit;
